@@ -24,6 +24,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <mockito.version>5.14.2</mockito.version>
     </properties>
 
     <build>
@@ -46,6 +47,13 @@
                     <configuration>
                         <source>21</source>
                         <target>21</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
                     </configuration>
                 </plugin>
             </plugins>
